// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Date Snapshots renders a condensed date 1`] = `
.c0 {
  margin: 10px 30px 0 0;
  white-space: nowrap;
}

@media (max-width:720px) {
  .c0 {
    margin: 10px 20px 0 0;
  }
}

<div
  className="c0"
>
  <div
    className="uTxCW fwcVer"
    fontFamily="Unica77LLWebMedium"
    fontSize={12}
  >
    May 19, 2017
  </div>
</div>
`;

exports[`Date Snapshots renders a date 1`] = `
.c0 {
  margin: 10px 30px 0 0;
  white-space: nowrap;
}

@media (max-width:720px) {
  .c0 {
    margin: 10px 20px 0 0;
  }
}

<div
  className="c0"
>
  <div
    className="uTxCW bTNvyd"
    fontFamily="Unica77LLWebMedium"
    fontSize={14}
  >
    May 19, 2017 9:09 am
  </div>
</div>
`;
